<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hp_background_image"
    android:id="@+id/sv_detail_item">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visibile"
        android:padding="12dp"
        android:layout_margin="18dp"
        app:cardCornerRadius="12dp"
        android:elevation="8dp"
        app:cardBackgroundColor="#740001">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_detail_item_inner">

            <TextView
                android:id="@+id/tv_detail_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="#99141414" />

            <ImageView
                android:id="@+id/iv_detail_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                tools:src="@drawable/character_placeholder_image" />

            <LinearLayout
                android:id="@+id/ll_detail_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/iv_detail_image"
                app:layout_constraintTop_toTopOf="@id/iv_detail_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/tv_detail_wizard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_actor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_alive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_ancestry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_eye_colour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_hair_colour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_hogwarts_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_hogwarts_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_house"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_patronus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_detail_year_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</ScrollView>
