...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/bt_hogwarts_staff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bt_hogwarts_students"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:text="hogwarts staff"
            android:backgroundTint="#740001"
...
