<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.students.StudentsFragment"
    android:id="@+id/cl_fragment_students">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recycler_view_students"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        tools:listitem="@layout/item_character"
        android:background="@drawable/hp_background_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>
