<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:id="@+id/cv_character_item"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:visibility="visibile"
...
